HW/practcie/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  selector:
      app: myapp
  ports:
  - name: http
    port: 80
    targetPort: 5678
  type: ClusterIP
