HW/practcie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-svc-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary-weight: "75"
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /apps
        pathType: Prefix
        backend:
          service:
            name: app-svc
            port:
              number: 80
